--- a/index.html
+++ b/index.html
@@ -2,56 +2,51 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Tamar Legacy</title>
+    <title>Kuolkm</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </head>
   <body>
-<img src="kk.jpg" alt="" width="150px">
-<h1>Kuol Daniel</h1>
-<h3> <em>founder of the <strong> <a href="http://www.instagram.com/kuolkm"> Tamar Legacy group</a></strong></em> </h3>
-<h3>
-  <em>I am a web development and a specialist in photography 📷</em>
-</h3>
-<hr>
-<h2>Skills needed</h2>
-<ul>
-  <li>Web development</li>
-  <li>2D animation full course</li>
-</ul>
-<hr>
-<h2>Work Experience</h2>
-<table>
-  <tr>
-    <th>Dates</th>
-      <th>Work</th>
-    </tr>
-      <tr>
-    <td cellspacing="10">2009-2010</td>
-      <td>Student at kazinga parents primary school</td>
-    </tr>
-      <tr>
-    <td>2010-2013</td>
-    <td>Stuent at St Barnabas Primary school</td>
-    </tr>
-      <tr>
-    <td>2013-2015</td>
-    <td>Student at St Peters SSS nsambya</td>
-  </tr>
-</table>
-<hr>
-<h2>Skills</h2>
-<table>
-  <tr>
-    <td>web development</td>
-    <td>⭐⭐⭐⭐</td>
-  </tr>
-  <tr>
-  <td>2D animation</td>
-  <td>⭐⭐⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>photography</td>
-    <td>⭐⭐⭐⭐</td>
-  </tr>
-</table>
+    <section class="title">
+
+<div class="kon">
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">KUOL DANNY</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="photos.html">Photography</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Contact me
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="https://www.instagram.com/kuolkm">Instagram</a>
+              <a class="dropdown-item" href="https://twitter.com/kuolkm">Twitter</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+      </div>
+    </nav>
+
+    <div class="row">
+      <div class="col-md-6"><img src="2.jpeg" alt=""></div>
+      <div class="col-md-6"><img src="4.jpeg" alt=""></div>
+    </div>
+
+  </section>
   </body>
 </html>
